Added detection for last tabPane in stage